--- a/RouteOptimizer/RouteOptimizer/Info.plist
+++ b/RouteOptimizer/RouteOptimizer/Info.plist
@@ -33,6 +33,8 @@
 	<string>RouteOptimizer will use your location while this app is in use</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
